--- a/Droid/CriminalIntentXamarin.Droid.csproj
+++ b/Droid/CriminalIntentXamarin.Droid.csproj
@@ -135,6 +135,12 @@
     <Reference Include="Xamarin.Android.Support.v7.RecyclerView">
       <HintPath>..\packages\Xamarin.Android.Support.v7.RecyclerView.28.0.0.1\lib\monoandroid90\Xamarin.Android.Support.v7.RecyclerView.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.Constraint.Layout.Solver">
+      <HintPath>..\packages\Xamarin.Android.Support.Constraint.Layout.Solver.1.1.2\lib\MonoAndroid70\Xamarin.Android.Support.Constraint.Layout.Solver.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Android.Support.Constraint.Layout">
+      <HintPath>..\packages\Xamarin.Android.Support.Constraint.Layout.1.1.2\lib\MonoAndroid70\Xamarin.Android.Support.Constraint.Layout.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
@@ -173,6 +179,11 @@
     <AndroidResource Include="Resources\layout\fragment_crime_list.axml" />
     <AndroidResource Include="Resources\layout\list_item_crime.axml" />
     <AndroidResource Include="Resources\layout\list_item_serious_crime.axml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_solved.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_solved.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_solved.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_solved.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_solved.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Activities\" />
