--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.criminalintentxamarin">
+	<uses-feature android:name="android.hardware.camera" android:required="false" />
 	<uses-sdk android:minSdkVersion="19" />
-	<application android:label="CriminalIntentXamarin"></application>
+	<application android:label="CriminalIntentXamarin">
+        <provider android:name="android.support.v4.content.FileProvider" android:authorities="com.bignerdranch.android.criminalintent.fileprovider" android:exported="false" android:grantUriPermissions="true"> 
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/files"/>
+        </provider>
+    </application>
 </manifest>
