Challenge: Efficient Thumbnail Load

--- a/Droid/CriminalIntentXamarin.Droid.csproj
+++ b/Droid/CriminalIntentXamarin.Droid.csproj
@@ -161,6 +161,8 @@
     <Compile Include="CriminalIntentApplication.cs" />
     <Compile Include="PictureUtils.cs" />
     <Compile Include="Fragments\ZoomedPictureFragment.cs" />
+    <Compile Include="Listeners\OnGlobalLayoutListener.cs" />
+    <Compile Include="Extensions\ViewExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -202,6 +204,8 @@
     <Folder Include="Resources\menu\" />
     <Folder Include="DataBase\" />
     <Folder Include="Resources\xml\" />
+    <Folder Include="Listeners\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\StyleCop.MSBuild.6.0.0\build\StyleCop.MSBuild.targets" Condition="Exists('..\packages\StyleCop.MSBuild.6.0.0\build\StyleCop.MSBuild.targets')" />
